--- a/app/src/main/res/layout/fragment_common.xml
+++ b/app/src/main/res/layout/fragment_common.xml
@@ -7,6 +7,8 @@
     <com.jude.easyrecyclerview.EasyRecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        app:layout_empty="@layout/view_empty"/>
 
 </LinearLayout>
