--- a/core/src/main/res/values/attrs.xml
+++ b/core/src/main/res/values/attrs.xml
@@ -39,4 +39,14 @@
         <attr name="ctvDirection" format="integer"/>
     </declare-styleable>
 
+
+
+    <!--顶部悬停控件-->
+    <declare-styleable name="StickNavLayout">
+        <!--默认是否悬停tab-->
+        <attr name="isStickNav" format="boolean"/>
+        <!--距离悬浮的位置-->
+        <attr name="stickOffset" format="dimension"/>
+    </declare-styleable>
+
 </resources>
