--- a/app/src/main/res/layout/view_load_more.xml
+++ b/app/src/main/res/layout/view_load_more.xml
@@ -11,13 +11,11 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <ProgressBar
+        <com.stx.xhb.dmgameapp.widget.LoadingView.LVCircularSmile
             android:id="@+id/loading_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="?android:attr/progressBarStyleSmall"
-            android:layout_marginRight="@dimen/dp_4"
-            android:indeterminateDrawable="@drawable/sample_footer_loading_progress"/>
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="@dimen/dp_4"/>
 
         <TextView
             android:id="@+id/loading_text"
