--- a/app/src/main/res/layout/activity_forum_list.xml
+++ b/app/src/main/res/layout/activity_forum_list.xml
@@ -9,9 +9,9 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/vp_container"
+    <com.jude.easyrecyclerview.EasyRecyclerView
+        android:id="@+id/rv_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
 </RelativeLayout>
