--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:background="@null"
             android:drawableLeft="@drawable/user_name"
             android:drawablePadding="10dp"
-            android:hint="用户名"
+            android:hint="用户名（三大妈账号）"
             android:singleLine="true"
             android:textSize="14dp"/>
 
