--- a/app/src/main/res/layout/activity_web_details.xml
+++ b/app/src/main/res/layout/activity_web_details.xml
@@ -18,9 +18,18 @@
             android:layout_marginRight="15dp"
             android:background="@null"
             android:src="@drawable/abc_ic_menu_share_mtrl_alpha" />
+
     </android.support.v7.widget.Toolbar>
 
-    <LinearLayout
+    <ProgressBar
+        android:id="@+id/web_progress"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="3dp"
+        android:progressDrawable="@drawable/web_progress_bg"
+        android:visibility="gone" />
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -41,13 +50,6 @@
             android:scaleType="fitCenter"
             android:src="@mipmap/v300_icon_top" />
 
-        <ProgressBar
-            android:id="@+id/web_progress"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="match_parent"
-            android:layout_height="8dp"
-            android:visibility="gone" />
-
-    </LinearLayout>
+    </FrameLayout>
 
 </LinearLayout>
