--- a/app/src/main/res/layout/fragment_comment_list.xml
+++ b/app/src/main/res/layout/fragment_comment_list.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
+    <com.jude.easyrecyclerview.EasyRecyclerView
+        android:id="@+id/rv_comment_list"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
