--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,4 +26,6 @@
     <color name="color_eeeeee">#eeeeee</color>
     <color name="color_b9b9b9">#b9b9b9</color>
     <color name="color_f8f8f8">#f8f8f8</color>
+    <color name="color_ededed">#ededed</color>
+    <color name="color_f1f4fb">#f1f4fb</color>
 </resources>
