--- a/app/src/main/res/layout/fragment_comment_list.xml
+++ b/app/src/main/res/layout/fragment_comment_list.xml
@@ -1,34 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorWhite"
     android:orientation="vertical">
 
     <com.stx.xhb.dmgameapp.widget.widget.CustomTitlebar
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/titlebar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        app:title_text="全部评论"
         app:left_button_image="@drawable/icon_img_return"
-        app:title_background="@color/colorPrimary" />
+        app:title_background="@color/colorPrimary"
+        app:title_text="全部评论"
+        app:title_textColor="@color/colorWhite"
+        app:title_textSize="16sp" />
 
     <com.jude.easyrecyclerview.EasyRecyclerView
         android:id="@+id/rv_comment_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" />
+        android:layout_weight="1"
+        app:layout_empty="@layout/view_empty" />
 
     <View
         android:layout_width="match_parent"
-        android:background="@color/divider"
-        android:layout_height="0.5dp"/>
+        android:layout_height="0.5dp"
+        android:background="@color/divider" />
 
     <LinearLayout
-        android:id="@+id/ll_comment"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:background="@color/colorWhite"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/btn_comment"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:background="@drawable/shape_edit_comment"
+            android:gravity="center_vertical"
+            android:padding="8dp"
+            android:text="说点什么..."
+            android:textSize="10sp" />
+
+        <TextView
+            android:id="@+id/btn_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:text="发送"
+            android:textSize="13sp" />
 
     </LinearLayout>
 
