--- a/app/src/main/res/layout/fragment_video.xml
+++ b/app/src/main/res/layout/fragment_video.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context=".mvp.view.main.GameFragment">
+              tools:context=".mvp.ui.main.GameFragment">
 
     <!-- 标题 -->
     <include layout="@layout/layout_title"/>
