--- a/app/src/main/res/layout/list_item_news.xml
+++ b/app/src/main/res/layout/list_item_news.xml
@@ -10,6 +10,7 @@
     card_view:contentPadding="5dp">
 
     <LinearLayout
+        android:id="@+id/ll_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
