--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context="com.stx.xhb.dmgameapp.MainActivity">
+              tools:context="com.stx.xhb.dmgameapp.mvp.ui.activity.MainActivity">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/main_viewpager"
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="3dp"
+        android:gravity="center_horizontal"
         android:background="@color/colorWhite"
         android:orientation="horizontal">
 
