--- a/app/src/main/res/layout/activity_spalsh.xml
+++ b/app/src/main/res/layout/activity_spalsh.xml
@@ -5,7 +5,7 @@
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
-              tools:context=".SplashActivity">
+              tools:context=".mvp.ui.activity.SplashActivity">
 
     <ImageView
         android:layout_width="match_parent"
