--- a/app/src/main/res/layout/list_item_news.xml
+++ b/app/src/main/res/layout/list_item_news.xml
@@ -41,8 +41,16 @@
 
                 <TextView
                     android:id="@+id/date"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"/>
+
+                <TextView
+                    android:id="@+id/author"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:layout_height="wrap_content" />
 
             </LinearLayout>
 
