完善游戏发售

--- a/app/src/main/res/layout/fragment_common_tab.xml
+++ b/app/src/main/res/layout/fragment_common_tab.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/colorWhite"
+    android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/divider"/>
+        android:background="@color/divider" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp">
+        android:layout_height="35dp">
 
         <TextView
             android:id="@+id/tv_first"
@@ -19,14 +20,14 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="14dp"
+            android:text="已发售"
             android:textColor="@color/color_888888"
-            android:text="已发售"/>
+            android:textSize="14dp" />
 
         <View
             android:layout_width="1px"
             android:layout_height="match_parent"
-            android:background="@color/divider"/>
+            android:background="@color/divider" />
 
         <TextView
             android:id="@+id/tv_second"
@@ -34,20 +35,20 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:textSize="14dp"
+            android:text="未发售"
             android:textColor="@color/color_888888"
-            android:text="未发售"/>
+            android:textSize="14dp" />
 
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1px"
-        android:background="@color/divider"/>
+        android:background="@color/divider" />
 
     <com.jude.easyrecyclerview.EasyRecyclerView
         android:id="@+id/rv_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
