--- a/app/src/main/res/layout/list_item_sub_comment.xml
+++ b/app/src/main/res/layout/list_item_sub_comment.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:padding="12dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="12dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <TextView
             android:id="@+id/tv_nick_name"
             android:layout_width="wrap_content"
@@ -15,14 +17,15 @@
             android:text="jxnk25"
             android:textColor="@color/color_008cf0"
             android:textSize="13sp" />
+
         <TextView
             android:id="@+id/btn_comment"
             android:layout_width="0dp"
-            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="回复"
+            android:layout_weight="1"
             android:gravity="right"
+            android:text="回复"
             android:textColor="@color/color_b9b9b9"
             android:textSize="13sp" />
     </LinearLayout>
